src/deployment/kubernetes_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dungeon-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dungeon-master
  template:
    metadata:
      labels:
        app: dungeon-master
    spec:
      containers:
        - name: dungeon-master
          image: dungeon-master:${IMAGE_VERSION}
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: dungeon-master
spec:
  selector:
    app: dungeon-master
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
